--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
  <!-- Example Code Start-->
- <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+ <nav class="navbar navbar-expand-lg " style="background-color: solid;">
+  <!-- bg-body-tertiary -->
   <div class="container-fluid">
-    <a class="navbar-brand"  href="#"><h3 style="color: blueviolet;">eduCare</h3></a>
+    <a class="navbar-brand"  href="#"><h3 style="color: blueviolet;margin-left: 15px;">eduCare</h3></a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
