admin student teacher dashboard done

--- a/src/app/admins/add-admin/add-admin.component.html
+++ b/src/app/admins/add-admin/add-admin.component.html
@@ -1,1 +1,64 @@
-<p>add-admin works!</p>
+<div class="body">
+  <div class="container">
+  <div class="row">
+    <!-- <div class="col-3">
+      <app-admin-dashboard></app-admin-dashboard>
+    </div> -->
+
+    <!-- <div class="col-9"> -->
+      <h1>Personal Information Details</h1>
+      <!-- <div class="profile-card"> -->
+        <div class="col-4 position-relative">
+          <img src="UserImage/girlUser.jpg" alt="Add Profile picture" class="img-fluid rounded shadow">
+          <div class="card-img-overlay d-flex justify-content-center align-items-center">
+            <span class="edit-icon">
+              <i class="bi bi-pen-fill">Edit</i>
+            </span>
+          </div>
+        </div>
+            <h2>Saima Sultana</h2>
+            <h4>Admin ID: 10001</h4>
+
+    <!-- </div> -->
+
+          <!-- <div class="col-8"> -->
+            <div class="info">
+              <form>
+                <div class="mb-3">
+                  <label for="fatherName" class="form-label">👨‍👩‍👧 Father's Name:</label>
+                  <input type="text" class="form-control" id="fatherName" value="Md. Noor E Ahmed">
+                </div>
+                <div class="mb-3">
+                  <label for="motherName" class="form-label">👩 Mother's Name:</label>
+                  <input type="text" class="form-control" id="motherName" value="Ashgary Begum">
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">📧 Email:</label>
+                  <input type="email" class="form-control" id="email" value="saimagmail.com">
+                </div>
+                <div class="mb-3">
+                  <label for="phoneNo" class="form-label">📞 Phone No:</label>
+                  <input type="text" class="form-control" id="phoneNo" value="0198675534">
+                </div>
+                <div class="mb-3">
+                  <label for="gender" class="form-label">🚺 Gender:</label>
+                  <select class="form-select" id="gender">
+                    <option selected>Female</option>
+                    <option>Male</option>
+                    <option>Other</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <label for="nationality" class="form-label">🌍 Nationality:</label>
+                  <input type="text" class="form-control" id="nationality" value="Bangladeshi">
+                </div>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
