--- a/src/app/admins/admin/admin.component.html
+++ b/src/app/admins/admin/admin.component.html
@@ -1,1 +1,50 @@
-<p>admin works!</p>
+
+<div class="body">
+
+  <div class="row">
+       <div class="col-3">
+          <app-admin-dashboard></app-admin-dashboard>
+      </div>
+
+
+      <div class="col-9">
+        <h1>Personal Information Details</h1>
+          <div class="profile-card">
+            <div class="row">
+              <div class="col-4">
+                <img src="UserImage/girlUser.jpg" alt="Add Profile picture">
+                <h2>Saima Sultana</h2>
+                <h4>Admin ID: 10001</h4>
+              </div>
+
+              <div class="col-8">
+                <div class="info">
+                  <p>👨‍👩‍👧 Father's Name: <span>Md. Noor E Ahmed</span></p>
+                  <p>👩 Mother's Name: <span>Ashgary Begum</span></p>
+                  <p>📧 Email: <span>saima&#64;gmail.com</span></p>
+                  <p>📞 Phone No: <span>0198675534</span></p>
+                  <p>🚺 Gender: <span>Female</span></p>
+                  <p>🌍 Nationality: <span>Bangladeshi</span></p>
+                </div>
+              </div>
+
+            </div>
+
+
+
+
+                <!-- <button type="submit"><a href="/add-admin">Edit Profile</a></button> -->
+
+                <a href="/add-admin" class="btn ">Edit Profile</a>
+
+
+            </div>
+
+      </div>
+
+   </div>
+</div>
+
+
+
+
