--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,72 @@
-<p>footer works!</p>
+
+<div class="body">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+
+    <div  class="col mb-3">
+      <table>
+        <tr>
+          <td>  <h3 style="color: blueviolet;">eduCare</h3></td>
+        </tr>
+
+      </table>
+
+    </div>
+
+
+  <div class="col mb-3">
+    <h5>About Us</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2"><a href="#" class="btn">About</a></li>
+      <li class="nav-item mb-2"><a href="#" class="btn">Features</a></li>
+      <li class="nav-item mb-2"><a href="/teacher" class="btn">Teachers</a></li>
+      <li class="nav-item mb-2"><a href="/faq" class="btn">FAQs</a></li>
+      <!-- <li class="nav-item mb-2"><a href="#" class="btn">About</a></li> -->
+    </ul>
+  </div>
+
+  <div class="col mb-3">
+    <h5>Resources</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2"><a href="/course" class="btn">Courses</a></li>
+      <li class="nav-item mb-2"><a href="/details" class="btn">Blog</a></li>
+      <li class="nav-item mb-2"><a href="terms&condition" class="btn">Terms & Conditions</a></li>
+      <li class="nav-item mb-2"><a href="#" class="btn">Privacy Policy</a></li>
+      <!-- <li class="nav-item mb-2"><a href="#" class="btn">About</a></li> -->
+    </ul>
+  </div>
+
+  <div class="col mb-3">
+    <h5>Contact Us</h5>
+    <ul class="nav flex-column">
+      <li class="nav-item mb-2"><a href="#" class="btn">Email us:educare&#64;info.com</a></li>
+      <li class="nav-item mb-2"><a href="#" class="btn">Call us:+91-1234567890</a></li>
+      <li class="nav-item mb-2"><a href="#" class="btn">Search In: </a>
+    <table>
+      <tr>
+        <td><i class="bi bi-facebook"></i></td>
+        <td><i class="bi bi-instagram"></i></td>
+        <td><i class="bi bi-twitter-x"></i></td>
+        <td><i class="bi bi-linkedin"></i></td>
+        <td><i class="bi bi-youtube"></i></td>
+
+      </tr>
+    </table>
+  </li>
+
+
+       <!-- <li class="nav-item mb-2"><a href="#" class="btn">About</a></li> -->
+    </ul>
+  </div>
+
+
+
+  </footer>
+  <div>
+  <hr>
+    <p>Copyright ©2025 by <span style="font-size: larger; color: rgb(129, 38, 194);"> educare</span> All rights reserved</p>
+  </div>
+  </div>
+
+
+
+
