--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,6 +35,19 @@
           </ul>
         </li>
 
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+           Dashboard
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/admin">Admin</a></li>
+            <li><a class="dropdown-item" href="/student">Student</a></li>
+            <li><a class="dropdown-item" href="/teacher">Teacher</a></li>
+
+
+          </ul>
+        </li>
+
       </ul>
       <form class="d-flex " >
         <div class="d-inline p-2">
