--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -51,10 +51,16 @@
       </ul>
       <form class="d-flex " >
         <div class="d-inline p-2">
-          <button class="btn btn-success" type="button">Registration</button>
+          <a href="/registration">
+            <button class="btn btn-success" type="button">Registration</button>
+          </a>
+
         </div>
         <div class="d-inline p-2">
-        <button class="btn btn-success" type="button">Login</button>
+          <a href="login">
+            <button class="btn btn-success" type="button">Login</button>
+          </a>
+
       </div>
       </form>
     </div>
