registration login update

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="container">
-  <div class="role-selection">
 
-    <p>Select your role to login</p>
+
+
+
     <!-- <div class="roles">
       <a *ngFor="let role of roles" href="{{role.link}}">
           <button (click)="selectRole(role)">
@@ -10,17 +10,11 @@
       </a>
     </div> -->
 
-    <div class="mb-3">
-     
-      <select id="role" class="form-control" name="role" required>
-        <option value="" disabled selected>Select your role</option>
-        <option value="ADMIN">Admin</option>
-        <option value="STUDENT">Student</option>
-        <option value="TEACHER">Teacher</option>
-      </select>
-    </div>
 
-  </div>
+<div class="body">
+
+
+
   <div class="login-form">
     <h2>Welcome Back</h2>
     <p>Please enter your credentials to access your account</p>
@@ -33,6 +27,5 @@
     <p>Don't have an account? <a href="/registration"><span>Registration</span></a></p>
   </div>
 
+
 </div>
-
-
