--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -10,7 +10,7 @@
           </a>
       </li>
       <li>
-          <a href="/courselist">
+          <a href="/course-list">
             <i class="bi bi-incognito"></i> Courses
           </a>
       </li>
