--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link " aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Courses</a>
+          <a class="nav-link" href="/courses">Courses</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="#">Teachers</a>
