--- a/src/app/pages/feedback/feedback.component.html
+++ b/src/app/pages/feedback/feedback.component.html
@@ -1,1 +1,15 @@
-<p>feedback works!</p>
+<!-- <div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+
+    <div class="col-md-4 mb-4" *ngFor="let feedback of feedback">
+      <img [src]="user.image" class="img-fluid rounded-start" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{user.name }}</h5>
+        <p class="card-text">{{feedback.content}}</p>
+        <p class="card-text"><small class="text-body-secondary">{{feedback.publisAt}}</small></p>
+      </div>
+    </div>
+  </div>
+</div> -->
