--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,6 +48,11 @@
           </ul>
         </li>
 
+        <!-- <nav>
+          <a routerLink="/dashboard">Dashboard</a>
+          <button (click)="logout()">Logout</button>
+        </nav> -->
+
       </ul>
       <form class="d-flex " >
         <div class="d-inline p-2">
