--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,10 @@
       <a class="nav-link" href="#">Feedback</a>
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link " aria-current="page" href="/add-course">Add Course</a>
+    </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
            Pages
