--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,4 @@
 
-
-
-
     <!-- <div class="roles">
       <a *ngFor="let role of roles" href="{{role.link}}">
           <button (click)="selectRole(role)">
@@ -30,29 +27,40 @@
 
 </div> -->
 
-
-<div class="login-container">
-  <h2>Login</h2>
+<div class="body">
+<div class="login-form">
+  <h2>Welcome Back</h2>
+  <p>Please enter your credentials to access your account</p>
   <form >
     <label for="email">Email:</label>
     <input
       id="email"
       type="email"
-      [(ngModel)]="credentials.email"
-      name="email"
+      [(ngModel)]="email"
+      name="email" placeholder="Enter your email"
       required
     />
     <label for="password">Password:</label>
     <input
       id="password"
       type="password"
-      [(ngModel)]="credentials.password"
-      name="password"
+      [(ngModel)]="password"
+      name="password" placeholder="Enter your password"
       required
     />
-    <button type="submit">Login</button>
+    <button (click)="onLogin()">Login</button>
+    <!-- <button type="submit">Login</button> -->
 
-    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+    <!-- <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p> -->
   </form>
+  <a href="#">Forgot password? <strong>Reset here</strong></a>
+    <p>Don't have an account? <a href="/registration"><span>Registration</span></a></p>
 </div>
-
+</div>
+<!--
+<div class="login">
+  <h2>Login</h2>
+  <input type="text" [(ngModel)]="email" placeholder="Email">
+  <input type="password" [(ngModel)]="password" placeholder="Password">
+  <button (click)="onLogin()">Login</button>
+</div> -->
