--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -39,7 +39,7 @@
       </li>
       <li><a href="/feedback">  <i class="bi bi-wechat"></i>Reviews</a></li>
 
-      <li><a href="#">
+      <li><a href="lesson-list">
           <i class="bi bi-journal-text"></i> Lessons</a></li>
 
           <li><a href="#">
