--- a/src/app/courses/add-course/add-course.component.html
+++ b/src/app/courses/add-course/add-course.component.html
@@ -1,11 +1,31 @@
 <div class="container">
     <fieldset>
     <h1>{{ isUpdate ? "Edit Course" : "Add Course" }}</h1>
-    <form (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
       <label for="name">Name:</label><br />
       <input type="text" name="name" [(ngModel)]="course.name" required /><br />
 
-     
+       <!-- Course Name -->
+       <!-- <div class="form-group">
+        <label for="name">Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          [(ngModel)]="course.name"
+          #name="ngModel"
+          required
+          minlength="3"
+          class="form-control"
+        />
+        <div *ngIf="name.invalid && name.touched" class="text-danger">
+          <small *ngIf="name.errors?.required">Name is required.</small>
+          <small *ngIf="name.errors?.minlength">Minimum 3 characters required.</small>
+        </div>
+      </div> -->
+
+
+
 
      <label for="startDate">Start Date</label><br>
      <input type="date" name="startDate" [(ngModel)]="course.startDate" required /><br />
