--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -50,7 +50,7 @@
   border-radius: 12px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   padding: 30px 40px;
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
   max-width: 400px;
 }
