--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -19,12 +19,12 @@
                   <!-- View details Button -->
                   <div class="button-container">
                     <button class="btn btn-warning shadow-sm fw-bold">
-                      View Details
+                       Details
                     </button>
-                    <button class="btn btn-enroll shadow-sm fw-bold">
-                      Enroll
+                     <!-- <button class="btn btn-enroll shadow-sm fw-bold "> Enroll
+                    </button> -->
 
-                    </button>
+                    <a href="/enroll" class="btn btn-success shadow-sm fw-bold "> Enroll</a>
                   </div>
 
               </div>
