--- a/src/app/pages/feedback/feedback.component.html
+++ b/src/app/pages/feedback/feedback.component.html
@@ -1,3 +1,21 @@
+
+
+<div class="a">
+  <div class="card text-bg-dark">
+      <img src="https://www.marinaosnaghi.com/wp-content/uploads/2024/09/feedback-1170x600.jpg" class="card-img" alt="...">
+       <div class="card-img-overlay">
+        <h1 class="card-title">Feedback</h1>
+        <h4>Your Feedback, Our Next Upgrade</h4>
+
+
+      </div>
+    </div>
+    <div class="container">
+  <h1>
+      What they say about our courses</h1>
+    </div>
+  </div>
+
 <!-- <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
 
