--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="#">Home</a>
+          <a class="nav-link " aria-current="page" href="/home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/courses">Courses</a>
@@ -18,7 +18,7 @@
         <a class="nav-link" href="#">Teachers</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link" href="#">Feedback</a>
+      <a class="nav-link" href="/feedback">Feedback</a>
     </li>
 
     <li class="nav-item">
@@ -30,7 +30,7 @@
            Pages
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Contact</a></li>
+            <li><a class="dropdown-item" href="/contact">Contact</a></li>
             <li><a class="dropdown-item" href="#">FAQ</a></li>
             <li><a class="dropdown-item" href="#">Terms & Conditions</a></li>
             <li><a class="dropdown-item" href="#">About</a></li>
