--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,40 @@
-<p>contact works!</p>
+
+<!-- <img src="https://www.oregon.gov/employ/Agency/PublishingImages/ContactUs-2024.jpg" class="img-fluid" width="100%" alt="...">  -->
+<div class="a">
+  <div class="card text-bg-dark">
+    <img src="https://www.oregon.gov/employ/Agency/PublishingImages/ContactUs-2024.jpg" class="card-img" alt="...">
+     <!-- <img src="Image/contact.jpg" class="card-img"  alt=""> -->
+    <div class="card-img-overlay">
+      <h1 class="card-title">Contact</h1>
+      <h4>Feel free to get in touch with us</h4>
+
+
+    </div>
+  </div>
+  <div class="container">
+    <h1>Media and</h1>
+    <h1>Business Inquiries</h1>
+    <h6>Send us a message below or email us at </h6>
+    <h5><a href="#">educare&#64;info.com</a></h5>
+  </div><br>
+    <div>
+      <form action="">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+
+        <div>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+
+        <div>
+          <label for="message">Message:</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+        <button type="submit">Submit</button>
+
+      </form>
+    </div>
+  </div>
