--- a/src/app/courses/add-course/add-course.component.html
+++ b/src/app/courses/add-course/add-course.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<!-- <div class="container">
     <fieldset>
     <h1>{{ isUpdate ? "Edit Course" : "Add Course" }}</h1>
     <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
       <label for="name">Name:</label><br />
-      <input type="text" name="name" [(ngModel)]="course.name" required /><br />
+      <input type="text" name="name" [(ngModel)]="course.name" required /><br /> -->
 
        <!-- Course Name -->
        <!-- <div class="form-group">
@@ -27,7 +27,7 @@
 
 
 
-     <label for="startDate">Start Date</label><br>
+     <!-- <label for="startDate">Start Date</label><br>
      <input type="date" name="startDate" [(ngModel)]="course.startDate" required /><br />
 
      <label for="teacher">Teacher</label><br>
@@ -52,4 +52,4 @@
   </div>
 
 
-
+ -->
