--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -35,17 +35,17 @@
                     <span class="text-muted">No Image</span>
                   </ng-template>
                 </td>
-                <td>
+                <!-- <td>
                   <div class="button-container">
                     <button class="btn btn-primary" (click)="editCourse(course)">Edit</button>
                     <button class="btn btn-warning" (click)="deleteCourse(course)">Delete</button>
                   </div>
-                </td>
+                </td> -->
 
               </tr>}
             </tbody>
           </table>
-          <button  class=" btn btn-primary" (click)="addNewCourse()">Add Course</button>
+          <!-- <button  class=" btn btn-primary" (click)="addNewCourse()">Add Course</button> -->
         </div>
 
 
