--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -45,7 +45,7 @@
               </tr>}
             </tbody>
           </table>
-          <!-- <button  class=" btn btn-primary" (click)="addNewCourse()">Add Course</button> -->
+           <button  class=" btn btn-primary" (click)="addNewCourse()">Add Course</button>
         </div>
 
 
