--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,8 +53,8 @@
 
     <!-- <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p> -->
   </form>
-  <a href="#">Forgot password? <strong>Reset here</strong></a>
-    <p>Don't have an account? <a href="/registration"><span>Registration</span></a></p>
+  <!-- <a href="#">Forgot password? <strong>Reset here</strong></a>
+    <p>Don't have an account? <a href="/registration"><span>Registration</span></a></p> -->
 </div>
 </div>
 <!--
