--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="/courses">Courses</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Teachers</a>
+        <a class="nav-link" href="/teacher-list">Teachers</a>
       </li>
       <li class="nav-item">
       <a class="nav-link" href="/feedback">Feedback</a>
@@ -32,14 +32,14 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/contact">Contact</a></li>
             <li><a class="dropdown-item" href="#">FAQ</a></li>
-            <li><a class="dropdown-item" href="#">Terms & Conditions</a></li>
+            <li><a class="dropdown-item" href="/termsCondition">Terms & Conditions</a></li>
             <li><a class="dropdown-item" href="#">About</a></li>
 
 
           </ul>
         </li>
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
            Dashboard
           </a>
@@ -50,7 +50,7 @@
 
 
           </ul>
-        </li>
+        </li> -->
 
         <!-- <nav>
           <a routerLink="/dashboard">Dashboard</a>
