--- a/src/app/pages/terms-and-condition/terms-and-condition.component.html
+++ b/src/app/pages/terms-and-condition/terms-and-condition.component.html
@@ -1,1 +1,74 @@
-<p>terms-and-condition works!</p>
+
+<div class="a">
+
+  <h1>TERMS AND CONDITIONS </h1>
+
+  <div class="container">
+  <p>
+    WE ENCOURAGE YOU TO READ THESE TERMS CAREFULLY,
+     AND TO CONTACT US IF YOU HAVE ANY QUESTIONS.
+     BY USING ANY OF OUR SERVICES ,
+     YOU AGREE TO BE BOUND BY,
+      AND TO ABIDE BY, THESE TERMS.
+     IF YOU DO NOT AGREE TO BE BOUND BY THESE TERMS,
+      OR ARE NOT ABLE TO ENTER INTO A BINDING AGREEMENT,
+      THEN UNFORTUNATELY YOU MAY NOT USE OUR SERVICES.
+    </p>
+    <h3>Welcome to Online Learning System of educare</h3>
+    <p>
+      This Agreement ("Terms") sets out the terms and conditions that govern your use of services,
+       as well as your enrollment for any course offered by World University of Bangladesh.
+        These Terms can also be seen as your comprehensive Student Handbook for online learning.
+        We hope that you find this information helpful.
+      </p>
+
+
+  <ol>
+    <li >
+      Although all these Terms are important,
+       please pay particular attention to any terms that are emphasized in "bold" text.
+      </li>
+    <li>
+      By agreeing to these Terms,
+      you also consent to the following policies applicable to,
+       and accessible on, our websites.
+      </li>
+    <li >
+      A list You will only receive confirmation of your registration for courses,
+      and be allowed access to the courses,
+     once you have made the required payment.
+     There may also be a delay of access to the services until you are formally enrolled in our records,
+    or until the course beginning date.
+  </li>
+    <li >
+      When you register for a semester, you agree to pay the applicable fees for courses and such other amounts as may be due by you arising from your participation in the semester
+    </li>
+    <li>
+      A list itemWhen making payment to us, you must ensure that your invoice number/ transaction number (to which the payment relates) is reflected on your payment. We will not be held liable if we are unable to locate your payment.
+      /li>
+    <li>
+      If you fail to make payment by the due date for payment (as agreed during admission), then we may suspend your participation in the semester in our sole discretion. If you are suspended from participation, you will not be permitted to access the courses until such time as the outstanding payment has been made by you.
+    </li>
+    <li>
+      You may receive communication by telephone, email or text message from our representatives/teachers for course administration and related purposes, including reminders of assignments and payments due by you, or other information related to your program. You agree and consent to receipt of such communications.
+    </li>
+    <li>
+      If you do not settle your fees in accordance with the agreed payment terms, you will not receive your final result for your courses.
+    </li>
+    <li>
+      Only students who are registered for semester may participate in course. You must not disclose your username or password to any other person, may not permit any other person to participate in the course on your behalf.
+    </li>
+    <li>
+      You are obliged to source and obtain access to the necessary software and resources required for any course completion at your own cost, and we won't be held liable for any consequences of the use of such software or resources. We do not sponsor or endorse for software and resources for the course outcomes.
+    </li>
+    <li>
+      We may change the course requirements for a particular course at any time by advising you by email to your email address.
+    </li>
+    <li >
+      English is the language of instruction and administration for all Courses. All coursework that is required for assessment purposes must be written in English.
+    </li>
+
+  </ol>
+  </div>
+  </div>
+
