--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -1,5 +1,17 @@
+<div class="video">
+<div class="card text-bg-dark" >
+  <!-- <img src="Image\coursepage.jpeg" class="card-img" alt="..."> -->
+  <video src="https://videos.pexels.com/video-files/3129977/3129977-sd_640_360_30fps.mp4" autoplay loop muted></video>
+  <div class="card-video-overlay">
+    <h2 class="card-title">Our Courses</h2>
+    <h3>Boost Your Skillset, Boost Your Career</h3>
 
-  <h1 class="form-title text-primary text-center mb-4"> Our Courses </h1>
+
+  </div>
+</div>
+</div>
+<div class="course">
+  <h1 class="form-title text-primary text-center mb-4"> All Courses </h1>
   <div class="row mt-4">
       <div class="col-md-4 mb-4" *ngFor="let course of course">
           <div class="card shadow-lg rounded-4">
@@ -18,12 +30,12 @@
 
                   <!-- View details Button -->
                   <div class="button-container">
-                    <button class="btn btn-warning shadow-sm fw-bold">
+                    <!-- <button class="btn btn-warning shadow-sm fw-bold">
                        Details
-                    </button>
+                    </button> -->
                      <!-- <button class="btn btn-enroll shadow-sm fw-bold "> Enroll
                     </button> -->
-
+                    <a href="/course-details" class="btn btn-success shadow-sm fw-bold "> Details</a>
                     <a href="/enroll" class="btn btn-success shadow-sm fw-bold "> Enroll</a>
                   </div>
 
@@ -33,4 +45,4 @@
   </div>
 
 
-
+</div>
