--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,81 @@
-<p>home works!</p>
+<section class="video">
+  <div class="card text-bg-dark">
+
+    <!-- <img src="https://roboticsbiz.com/wp-content/uploads/2023/09/technology.jpg" class="card-img" alt="..."> -->
+     <!-- <img src="Image/contact.jpg" class="card-img"  alt=""> -->
+     <video class="video" src="https://videos.pexels.com/video-files/6996523/6996523-uhd_2560_1440_30fps.mp4" autoplay loop muted></video>
+    <div class="card-img-overlay">
+      <h1>Welcome to educare</h1>
+
+      <!-- <h3>Education for the Digital Age.</h3> -->
+      <h3>A Comprehensive Online  Learning Platform
+      </h3>
+
+      </div>
+  </div>
+</section>
+<section class="course">
+  <h2>Checkout New Releases Of Our Courses</h2>
+  <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+
+      <div class="card" style="width: 16rem;">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv_al5pqaDdDHWONxiCA-B1mjpNdbA8fEe8g&s" alt="">
+           <div class="card-body">
+             <h5 class="card-title">Learn JAVA</h5>
+             <p class="card-text">Java Programming and Software Engineering Fundamentals Specialization</p>
+           </div>
+
+           <div class="card-body d-flex justify-content-between align-items-center">
+             <a href="/coursedetails" class="btn btn-primary">View Details</a>
+             <a href="#" class="btn btn-primary">Enroll Now</a>
+           </div>
+         </div>
+
+
+
+     <div class="card" style="width: 16rem;" >
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR71IUWvrIMT2jSlNNBfSPY-Pa3va_WFOhfeA&s" alt="">
+       <div class="card-body">
+         <h5 class="card-title">Learn Angular</h5>
+         <p class="card-text">This interactive tutorial will teach you the basic building blocks to sta...</p>
+       </div>
+
+       <div class="card-body d-flex justify-content-between align-items-center">
+         <a href="/coursedetails" class="btn btn-primary">View Details</a>
+          <a href="#" class="btn btn-primary">Enroll Now</a>
+       </div>
+     </div>
+     <div class="card" style="width: 16rem;">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuTinuVFvZgh6yhUzsS7AWfa0GHWmXXhZjBg&s" alt="">
+       <div class="card-body">
+         <h5 class="card-title">Learn HTML</h5>
+         <p class="card-text">
+          HTML For Beginners The Easy Way: Start Learning HTML & CSS Today . Html is ....</p>
+       </div>
+
+       <div class="card-body d-flex justify-content-between align-items-center">
+         <a href="/coursedetails" class="btn btn-primary">View Details</a>
+         <a href="#" class="btn btn-primary">Enroll Now</a>
+       </div>
+     </div>
+
+     <div class="card" style="width: 16rem;" >
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR71IUWvrIMT2jSlNNBfSPY-Pa3va_WFOhfeA&s" alt="">
+       <div class="card-body">
+         <h5 class="card-title">Learn Angular</h5>
+         <p class="card-text">This interactive tutorial will teach you the basic building blocks to sta...</p>
+       </div>
+
+       <div class="card-body d-flex justify-content-between align-items-center">
+         <a href="/coursedetails" class="btn btn-primary">View Details</a>
+          <a href="#" class="btn btn-primary">Enroll Now</a>
+       </div>
+     </div>
+
+    </div>
+
+</section>
+
+<section class="feedback">
+
+</section>
