--- a/src/app/admins/admin/admin.component.html
+++ b/src/app/admins/admin/admin.component.html
@@ -1,5 +1,5 @@
 
-<!-- <div class="body">
+<div class="body">
 
   <div class="row">
        <div class="col-3">
@@ -47,8 +47,8 @@
 
 
 
- -->
- <div class="body">
+
+ <!-- <div class="body">
 
   <div class="row">
        <div class="col-3">
@@ -90,5 +90,5 @@
       </div>
 
    </div>
-</div>
+</div> -->
 
