--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,9 +21,9 @@
       <a class="nav-link" href="/feedback">Feedback</a>
     </li>
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link " aria-current="page" href="/add-course">Add Course</a>
-    </li>
+    </li> -->
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,12 +61,12 @@
       <form class="d-flex " >
 
         @if (isAuthenticated) {
-        <div class="d-inline p-2">
+        <!-- <div class="d-inline p-2">
           <a href="/registration">
             <button class="btn btn-success" type="button">Registration</button>
           </a>
 
-        </div>
+        </div> -->
         <div class="d-inline p-2">
           <a href="login">
             <button class="btn btn-success" type="button">Login</button>
@@ -75,7 +75,7 @@
       } @else {
         <div class="d-inline p-2">
           <a href="login">
-            <button (click)="logout()" class="btn btn-success" type="button">🚪 Logout</button>
+            <button (click)="logout()" class="btn btn-success" type="button">Logout</button>
           </a>
         </div>
         <!-- <li class="nav-item">
