--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,56 +1,52 @@
 <div class="body">
+  <h1>Course List</h1>
+  <table class="table table-striped table-hover table-bordered">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>ID</th>
+        <th>Teacher_id</th>
+        <th>CourseName</th>
+        <th>Start Date</th>
 
-          <h1>Course List</h1>
-          <table class="table  table-striped table-hover table-bordered ">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>ID</th>
-                <th>CourseName</th>
-                <th>Start Date</th>
-                <th>Teacher_id</th>
-               <th>Duration</th>
-               <th>Price</th>
-               <th>Description</th>
-               <th>Image</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              @for (course of courses; track course.name) {
-              <!-- <tr *ngFor="let course of courses"> -->
-                <tr>
-                  <td>{{courses.indexOf(course) + 1}}</td>
-                <td>{{ course.course_id }}</td>
-                <td>{{ course.name }}</td>
+        <th>Duration</th>
+        <th>Price</th>
+        <th>Description</th>
+        <th>Image</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (course of courses; track course.name) {
+      <!-- <tr *ngFor="let course of courses"> -->
+      <tr>
+        <td>{{ courses.indexOf(course) + 1 }}</td>
+        <td>{{ course.course_id }}</td>
+        <td>{{ course.teacher_id }}</td>
+        <td>{{ course.name }}</td>
 
-                <td>{{ course.startDate }}</td>
-                <td>{{ course.teacher_id }}</td>
-                <td>{{ course.duration }}</td>
-                <td>{{ course.price }}</td>
-                <td>{{ course.description }}</td>
-                <td>
+        <td>{{ course.startDate }}</td>
+
+        <td>{{ course.duration }}</td>
+        <td>{{ course.price }}</td>
+        <td>{{ course.description }}</td>
+        <td>
                   <img *ngIf="course.image; else noImage" [src]="course.image" alt="Course Image" class="img-thumbnail" width="60" height="60" />
                   <ng-template #noImage>
                     <span class="text-muted">No Image</span>
                   </ng-template>
                 </td>
-                <td>
-                  <div class="button-container">
-                    <button class="btn btn-primary" (click)="Edit(course)">Edit</button>
-                    <button class="btn btn-warning" (click)="Delete(course)">Delete</button>
-                  </div>
-                </td>
-
-              </tr>}
-            </tbody>
-          </table>
-           <button  class=" btn btn-primary" (click)="addNewCourse()">Add Course</button>
-        </div>
-
-
-
-
-
-
-
+        <td>
+          <div class="button-container">
+            <button class="btn btn-primary" (click)="Edit(course)">Edit</button>
+            <button class="btn btn-warning" (click)="Delete(course)">
+              Delete
+            </button>
+          </div>
+        </td>
+      </tr>
+      }
+    </tbody>
+  </table>
+  <button class="btn btn-primary" (click)="addNewCourse()">Add Course</button>
+</div>
