--- a/src/app/lessons/add-lesson/add-lesson.component.html
+++ b/src/app/lessons/add-lesson/add-lesson.component.html
@@ -5,7 +5,7 @@
   <h1>{{ isUpdate ? "Edit Lesson" : "Add Lesson" }}</h1>
   <form (ngSubmit)="onSubmit()">
     <label for="title">Title:</label><br />
-    <input type="text" name="title" [(ngModel)]="lessons.title" required /><br />
+    <input type="text" name="title" [(ngModel)]="lessons.topic" required /><br />
 
    <label for="course_id">Course_Id</label><br>
    <input type="text" name="course_id" [(ngModel)]="lessons.course_id" required /><br />
