--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,8 +26,8 @@
            </div>
 
            <div class="card-body d-flex justify-content-between align-items-center">
-             <a href="/coursedetails" class="btn btn-primary">View Details</a>
-             <a href="#" class="btn btn-primary">Enroll Now</a>
+             <a href="/course-details" class="btn btn-primary">View Details</a>
+             <a href="/enroll" class="btn btn-primary">Enroll Now</a>
            </div>
          </div>
 
@@ -41,8 +41,8 @@
        </div>
 
        <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/coursedetails" class="btn btn-primary">View Details</a>
-          <a href="#" class="btn btn-primary">Enroll Now</a>
+         <a href="/course-details" class="btn btn-primary">View Details</a>
+          <a href="/enroll" class="btn btn-primary">Enroll Now</a>
        </div>
      </div>
      <div class="card" style="width: 16rem;">
@@ -54,8 +54,8 @@
        </div>
 
        <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/coursedetails" class="btn btn-primary">View Details</a>
-         <a href="#" class="btn btn-primary">Enroll Now</a>
+         <a href="/course-details" class="btn btn-primary">View Details</a>
+         <a href="/enroll" class="btn btn-primary">Enroll Now</a>
        </div>
      </div>
 
@@ -67,8 +67,8 @@
        </div>
 
        <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/coursedetails" class="btn btn-primary">View Details</a>
-          <a href="#" class="btn btn-primary">Enroll Now</a>
+         <a href="/course-details" class="btn btn-primary">View Details</a>
+          <a href="/enroll" class="btn btn-primary">Enroll Now</a>
        </div>
      </div>
 
