--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -16,9 +16,9 @@
       <!-- <tr *ngFor="let course of courses"> -->
       <tr>
         <td>{{ lessons.indexOf(lesson) + 1 }}</td>
-        <td>{{ lesson.lesson_id }}</td>
+        <td>{{ lesson.id }}</td>
         <td>{{ lesson.topic }}</td>
-        <td>{{ lesson.course_id }}</td>
+        <td>{{ lesson.courseId }}</td>
         <td>{{ lesson.content }}</td>
         <td>
           <div class="button-container">
