--- a/src/app/lessons/add-lesson/add-lesson.component.html
+++ b/src/app/lessons/add-lesson/add-lesson.component.html
@@ -8,7 +8,7 @@
     <input type="text" name="title" [(ngModel)]="lessons.topic" required /><br />
 
    <label for="course_id">Course_Id</label><br>
-   <input type="text" name="course_id" [(ngModel)]="lessons.course_id" required /><br />
+   <input type="text" name="course_id" [(ngModel)]="lessons.courseId" required /><br />
 
    <label for="content">Content:</label><br />
    <textarea [(ngModel)]="lessons.content" name="content" required></textarea><br />
